# SentinelOps

./: .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/error_corpus/: oom_payment_history.md  probe_failure_history.md
data/system_docs/: payment-v2-architecture.md
src/: main.py
src/anonymizer/: mask.py
src/messaging/: bus.py
src/models/: causal_lstm.py  train.py
src/orchestrator/: audit.py  healing.py
src/rag/: embeddings.py  enrich_log.py  llm_client.py  mock_llm.py  vector_store.py
tests/: test_anonymizer.py  test_causal_lstm.py  test_e2e_oom.py  test_enrich_log.py
