[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelops"
version = "0.1.0"
description = "CausalConvLSTM + EnrichLog explainable log analysis and autonomous remediation (KVKK/BDDK compliant)"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]
