[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelops"
version = "0.1.0"
description = "CausalConvLSTM + EnrichLog explainable log analysis and autonomous remediation (KVKK/BDDK compliant)"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0.0",
    "numpy>=1.24.0",
    # RAG / API
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    # Config
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Real-inference stack (enabled via config mode: real).
# Install with: uv sync --extra real
real = [
    "sentence-transformers>=2.5.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
filterwarnings = ["ignore::DeprecationWarning"]
